--- a/03/style.css
+++ b/03/style.css
@@ -1,6 +1,7 @@
 html {
     background-color: #ccc;
     box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
 }
 
 *, *:before, *:after {
@@ -8,22 +9,34 @@ html {
 }
 
 main {
-    border: 2px black solid;
+    border: 50rem black;
+    border-radius: 10px;
     padding: 10px;                      
 }
 
 header {
     text-align: center;
+    background-color: lightblue;
+    padding: 5px;
 }
 
 article {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flow-root;
 }
 
 article img {
+    max-width: 15rem;
+    float: left;
+    border: 50rem;
+    border-radius: 5px;
+    margin-right: 10px;
+
 }
 
 footer {
-    background-color: #dfebfb;
+    background-color: lightblue;
     min-height: 5rem;
     /* please don't change these values; you will have 
        plenty of chance to play with flex in the next problem */
