--- a/04/style.css
+++ b/04/style.css
@@ -12,8 +12,8 @@ main {
     grid-template-areas: "nav nav nav"
                          "side art aside"
                          "side art aside";
-    grid-template-columns: 
-    grid-template-rows: 
+    grid-template-columns: 1fr 4fr 1fr 1fr;
+    grid-template-rows: 1fr 4fr 4fr 4fr; 
     grid-gap: 
 }
 
@@ -28,16 +28,16 @@ main>* {
 
 aside {
     background-color: rgba(143, 81, 188, 0.3);
-    grid-area:
+    grid-area: aside;
 }
 
 
 section.sidebar {
     background-color: rgba(150, 112, 36, 0.3);
-    grid-area:
+    grid-area: side; 
     display: flex; 
-    flex-direction:
-    justify-content:            /*these last two are optional*/
+    flex-direction: column;
+    justify-content: flex-start;            /*these last two are optional*/
     align-items:
 }
 
@@ -49,16 +49,16 @@ section.sidebar img {
 
 nav {
     background-color: rgba(30,200,30,0.3);
-
+    grid-area: nav;
 }
 
 article {
     background-color: rgba(30,30,30,0.4);
-    grid-area:
-    display: grid ;
+    grid-area: art;
+    display: grid;
     grid-template-columns: repeat (5, 1fr);
     grid-template-rows: repeat (5, 1fr);
-    grid-gap:                   /*the gap is optional*/    
+    grid-gap: 5px;                 /*the gap is optional*/    
 }
 
 /* these next two are just simple styling to make the div boxes visible */
@@ -76,28 +76,28 @@ article div section {
 
 /* use the grid-row and grid-column values to place the boxes precisely onto the grid */
 #box1 {
-    grid-row:
-    grid-column:
+    grid-row: 1;
+    grid-column: 1 / 1;
 }
 
 #box2 {
-    grid-row:
-    grid-column:
+    grid-row: 2;
+    grid-column: 2 / 2;
 }
 
 #box3 {
-    grid-row:
-    grid-column:
+    grid-row: 3;
+    grid-column: 3 / 3;
 }
 
 #box4 {
-    grid-row:
-    grid-column:
+    grid-row: 4;
+    grid-column: 4 / 4;
 }
 
 #box5 {
-    grid-row:
-    grid-column:
+    grid-row: 1;
+    grid-column: 4 / 4;
     background-color: rgba(200,10,10,0.3)
 }
 
@@ -114,7 +114,7 @@ article div section {
         grid-template-rows: 80px 1fr 120px 80px;
     }
     section.sidebar {
-        flex-direction: ;       /* when the screen shrinks, change direction.*/
+        flex-direction: column;       /* when the screen shrinks, change direction.*/
     }
     
     section.sidebar img {       /* I'vefilled these in for you; feel free to fool with them if you like. */
