--- a/04/style.css
+++ b/04/style.css
@@ -12,8 +12,8 @@ main {
     grid-template-areas: "nav nav nav"
                          "side art aside"
                          "side art aside";
-    grid-template-columns: 1fr 4fr 1fr 1fr;
-    grid-template-rows: 1fr 4fr 4fr 4fr; 
+    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-rows: 1fr 4fr 4fr; 
     grid-gap: 
 }
 
@@ -37,8 +37,8 @@ section.sidebar {
     grid-area: side; 
     display: flex; 
     flex-direction: column;
-    justify-content: flex-start;            /*these last two are optional*/
-    align-items:
+    justify-content: space-evenly;            /*these last two are optional*/
+    align-items: center;
 }
 
 section.sidebar img {
@@ -58,7 +58,8 @@ article {
     display: grid;
     grid-template-columns: repeat (5, 1fr);
     grid-template-rows: repeat (5, 1fr);
-    grid-gap: 5px;                 /*the gap is optional*/    
+    grid-gap:
+                   /*the gap is optional*/    
 }
 
 /* these next two are just simple styling to make the div boxes visible */
@@ -76,28 +77,28 @@ article div section {
 
 /* use the grid-row and grid-column values to place the boxes precisely onto the grid */
 #box1 {
-    grid-row: 1;
-    grid-column: 1 / 1;
+    grid-row: 1 / span 2;
+    grid-column: 1 / span 2;
 }
 
 #box2 {
-    grid-row: 2;
-    grid-column: 2 / 2;
+    grid-row: 2 / span 2;
+    grid-column: 2 / span 2;
 }
 
 #box3 {
-    grid-row: 3;
-    grid-column: 3 / 3;
+    grid-row: 3 / span 2;
+    grid-column: 3 / span 2;
 }
 
 #box4 {
-    grid-row: 4;
-    grid-column: 4 / 4;
+    grid-row: 4 / span 2;
+    grid-column: 4 / span 2;
 }
 
 #box5 {
     grid-row: 1;
-    grid-column: 4 / 4;
+    grid-column: 5 / 5;
     background-color: rgba(200,10,10,0.3)
 }
 
@@ -114,7 +115,7 @@ article div section {
         grid-template-rows: 80px 1fr 120px 80px;
     }
     section.sidebar {
-        flex-direction: column;       /* when the screen shrinks, change direction.*/
+        flex-direction: column-reverse;       /* when the screen shrinks, change direction.*/
     }
     
     section.sidebar img {       /* I'vefilled these in for you; feel free to fool with them if you like. */
