--- a/03/style.css
+++ b/03/style.css
@@ -23,6 +23,8 @@ header {
 
 article {
     margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px; 
     margin-bottom: 10px;
     display: flow-root;
 }
