--- a/04/style.css
+++ b/04/style.css
@@ -77,28 +77,28 @@ article div section {
 
 /* use the grid-row and grid-column values to place the boxes precisely onto the grid */
 #box1 {
-    grid-row: 1 / span 2;
-    grid-column: 1 / span 2;
+    grid-row: 1/3;
+    grid-column: 1/3;
 }
 
 #box2 {
-    grid-row: 2 / span 2;
-    grid-column: 2 / span 2;
+    grid-row: 2/4;
+    grid-column: 2/4;
 }
 
 #box3 {
-    grid-row: 3 / span 2;
-    grid-column: 3 / span 2;
+    grid-row: 3/5;
+    grid-column: 3/5;
 }
 
 #box4 {
-    grid-row: 4 / span 2;
-    grid-column: 4 / span 2;
+    grid-row: 4/6;
+    grid-column: 4/6;
 }
 
 #box5 {
-    grid-row: 1;
-    grid-column: 5 / 5;
+    grid-row: 1/2;
+    grid-column: 5/6;
     background-color: rgba(200,10,10,0.3)
 }
 
@@ -115,7 +115,7 @@ article div section {
         grid-template-rows: 80px 1fr 120px 80px;
     }
     section.sidebar {
-        flex-direction: column-reverse;       /* when the screen shrinks, change direction.*/
+        flex-direction: row;       /* when the screen shrinks, change direction.*/
     }
     
     section.sidebar img {       /* I'vefilled these in for you; feel free to fool with them if you like. */
