Part 5 changes and reflection

--- a/05/style.css
+++ b/05/style.css
@@ -3,15 +3,16 @@ html{
 }
 
 article {
-    background:  rgba(50, 38, 179, 0);
+    background:  rgba(50, 38, 179, 0.795);
     flex-flow: row;
     max-width: 80rem;
-    display: flex
+    display: flex;
+    border-top-right-radius: 20px;
 }
 header {
-    background: rgba(206, 163, 22, 0);
+    background: rgb(206, 163, 22);
     text-align: center;
-    
+    padding: 20px
 }
 section.main { 
     margin-left: 10px ; 
@@ -20,16 +21,17 @@ section.main {
 }
 
 section.sources {
-    margin-left: 20px ; 
-    margin-right: 20px ;
-    border: 50rem orange;
-    border-radius: 10px;
-    text-align: center
+    margin-right: 225px;
+    padding: 20px ;
+    background: rgb(206, 163, 22) ;
+    text-align: center;
+    border-bottom-right-radius: 20px;
 }
 
 section img {
     max-width: 30rem;
     float: left;
-    padding: 10px;
-    border: 10px;
+    padding-right: 10px;
+    padding-top: 20px;
+    border-radius: 50px;
 }
